--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.10
 Django==3.1.2
 django-allauth==0.43.0
+django-countries==6.1.3
 django-crispy-forms==1.9.2
 oauthlib==3.1.0
 Pillow==8.0.1
@@ -10,3 +11,4 @@ pytz==2020.1
 requests-oauthlib==1.3.0
 South==1.0.2
 sqlparse==0.4.1
+stripe==2.55.0
