--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Pillow==8.0.1
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 PyJWT==1.7.1
+pysqlite3==0.4.4
 python3-openid==3.2.0
 pytz==2020.1
 requests-oauthlib==1.3.0
